# ideacli

./: .gitignore  BUSINESS-CASE.md  Dockerfile  POC-APPROACH.md  README.md  cleanup_json.py  prompt-template.json  pyproject.toml  pytest.ini  release.sh  run.py
.github/: FUNDING.yml
.github/workflows/: pylint.yml
src/botcli/: botcli.py  cli.py  clipboard.py  repository.py
src/ideacli/: __init__.py  add.py  cli.py  clipboard.py  enquire.py  files.py  list.py  rename.py  repository.py  show.py  update.py
tests/: conftest.py  test_add.py  test_cli.py  test_clipboard.py  test_repository.py
