[project]
name = "ideacli"
version = "0.1.0"
description = "CLI tool for managing LLM conversation ideas"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
dependencies = [
    "setuptools>=80",   # runtime safety for newer versions
    "pyperclip>=1.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "coverage>=7.8",
    "pylint>=3.3.7"
]

[project.scripts]
ideacli = "ideacli.cli:main"

[tool.setuptools]
packages = ["ideacli"]
package-dir = {"" = "src"}
